--- a/Proyecto/registroClientes.html
+++ b/Proyecto/registroClientes.html
@@ -14,28 +14,26 @@
     <!-- -->
   </head>
   <body>
-    <div class="containerPage">
-      <header>
-        <div class="contenedor-header">
-          <div class="contenedor-logo">
-            <img src="../Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
-          </div>
-          <div class="contenedor-menu">
-            <input type="checkbox" id="boton-menu" />
-            <div class="contenedor_icon-menu">
-              <label for="boton-menu"><i class="icon-menu bi bi-list"></i>
+    <div id="container_ppal">
+      <div id="containerPage">
+        <header>
+          <div class="contenedor-header">
+            <div class="contenedor-logo">
+              <img class="img-logo" src="../Imagenes/Logo.png" alt="Freya"/> 
             </div>
-            <nav class="navegacion">
+            <div class="contenedor-menu">
+              <span class="icon-menu" id="btn-menu"><i class="bi bi-list"></i></span>
+              <nav class="navegacion" id="navegacion">
                 <ul class="menu">
                   <li><a href="../index.html">Inicio</a>
                   <li><a href="../galeria.html">Galeria</a>
                     <ul class="submenu">
-                      <li><a style="padding: 15px" href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                      <li><a style="padding: 15px" href="../GaleriaHTML/corazones.html" >Corazones</a></li>
-                      <li><a style="padding: 15px" href="../GaleriaHTML/licores.html" >Bebidas</a></li>
-                      <li><a style="padding: 15px" href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
-                      <li><a style="padding: 15px" href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                      <li><a style="padding: 15px" href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
+                      <li><a href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                      <li><a href="../GaleriaHTML/corazones.html" >Corazones</a></li>
+                      <li><a href="../GaleriaHTML/licores.html" >Bebidas</a></li>
+                      <li><a href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                      <li><a href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                      <li><a href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
                     </ul>
                   </li>
                   <li><a href="../tienda.html">Tienda</a></li>
@@ -43,90 +41,62 @@
                   <li><a href="../contacto.html">Contáctanos</a></li>
                 </ul>
             </nav>
+            </div>
+            
           </div>
-        </div>
-      </header>
-
-    <main>
-      <div class="container-main">
-        <form class="contacto">
-          <fieldset>
-            <section class="tituloFormulario">
-              <h2>Datos Personales</h2>
-            </section>
-            <div class="grupo">
-              <label for="email">Usuario/Email</label>
-              <input type="email" id="email" name="email" class="campo"/>
+        </header>
+        <main>
+          <div class="container-main">
+            <form class="contacto">
+              <fieldset>
+                <section class="tituloFormulario">
+                  <h2>Datos Personales</h2>
+                </section>
+                <div class="grupo">
+                  <label for="email">Usuario/Email</label>
+                  <input type="email" id="email" name="email" class="campo"/>
+                </div>
+                <div class="grupo">
+                  <label for="nombreReg">Nombre</label>
+                  <input type="text" id="nombreReg" name="nombreReg" class="campo">
+                </div>
+                <div class="grupo">
+                  <label for="apellidoReg">Apellido</label>
+                  <input type="text" id="apellidoReg" name="apellidoReg" class="campo">
+                </div>
+                <div class="grupo">
+                  <label for="password">Contraseña</label>
+                  <input type="text" id="password" name="password" class="campo" >
+                </div>
+                <div class="grupo">
+                  <label for="password">Confirme la Contraseña</label>
+                  <input type="text" id="password" name="password" class="campo" >
+                </div>
+                <div>
+                  <input class="boton" type="submit" id="registro" name="registrar"/>
+                </div>
+                <div>
+                  <input class="boton" type="reset" id="reset" name="reset"/>
+                </div>
+              </fieldset>
+            </form>
+          </div>
+        </main>
+        <footer>
+          <div class="contenedor-footer">
+            <div class="iconos">
+              <img class="IMG_footer" src="../Imagenes/instagram.svg">
+              <img class="IMG_footer" src="../Imagenes/facebook.svg">
             </div>
-            <div class="grupo">
-              <label for="nombreReg">Nombre</label>
-              <input type="text" id="nombreReg" name="nombreReg" class="campo">
+            <div class="textofooter">
+              <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
+              <h2 class="titulofooter">Teléfono/Whatsapp: <i class="bi bi-whatsapp">3132371940</i></h2>
+              <h2 class="titulofooter">Horario de atención: Lunes a Sábado de 8:00 am a 6:00 pm</h2>
             </div>
-            <div class="grupo">
-              <label for="apellidoReg">Apellido</label>
-              <input type="text" id="apellidoReg" name="apellidoReg" class="campo">
-            </div>
-            <div class="grupo">
-              <label for="password">Contraseña</label>
-              <input type="text" id="password" name="password" class="campo" >
-            </div>
-            <div class="grupo">
-              <label for="password">Confirme la Contraseña</label>
-              <input type="text" id="password" name="password" class="campo" >
-            </div>
-            <!--
-            <div class="grupo">
-              <label for="nombreReg">Nombre</label>
-              <input type="text" id="nombreReg" name="nombreReg" class="campo">
-            </div>
-            <div class="grupo">
-              <label for="apellidoReg">Apellido</label>
-              <input type="text" id="apellidoReg" name="apellidoReg" class="campo">
-            </div>
-            <div class="grupo">
-              <label for="documento">Tipo Documento</label><br />
-              <select id="documento" name="documento" class="selectDto">
-                <option value="CC" selected>Cedula Ciudadania</option>
-                <option value="CE">Cedula Extranjera</option>
-                <option value="PP">Pasaporte</option>
-              </select>
-            </div>
-            <div class="grupo">
-              <label for="numDoc">Documento</label>
-              <input type="number" id="numDoc" name="numDoc" class="campo">
-            </div>
-            <div class="grupo">
-              <label for="genero">Genero</label>
-              <select id="genero" name="genero" class="selectDto">
-                <option value="fem" selected>Femenino</option>
-                <option value="mas">Masculino</option>
-              </select>
-            </div>
-          -->
-            <div>
-              <input class="boton" type="submit" id="registro" name="registrar"/>
-            </div>
-            <div>
-              <input class="boton" type="reset" id="reset" name="reset"/>
-            </div>
-          </fieldset>
-        </form>
+          </div>
+        </footer>
       </div>
-    </main>
-
-    <footer>
-      <div class="contenedor-footer">
-        <div class="iconos">
-          <img class="IMG_footer" src="../Imagenes/instagram.svg">
-          <img class="IMG_footer" src="../Imagenes/facebook.svg">
-        </div>
-        <div class="textofooter">
-          <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
-          <h2 class="titulofooter">Teléfono/Whatsapp: <i class="bi bi-whatsapp">3132371940</i></h2>
-          <h2 class="titulofooter">Horario de atención: Lunes a Sábado de 8:00 am a 6:00 pm</h2>
-        </div>
-      </div>
-    </footer>
-  </div>
+      <script src="../javaScript/menu.js"></script>
+    </div>
   </body>
 </html>
