--- a/Proyecto/tienda.html
+++ b/Proyecto/tienda.html
@@ -14,28 +14,26 @@
     <!-- -->
 </head>
 <body>
-  <div class="containerPage">
-    <header>
-      <div class="contenedor-header">
-        <div class="contenedor-logo">
-          <img src="../Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
-        </div>
-        <div class="contenedor-menu">
-          <input type="checkbox" id="boton-menu" />
-          <div class="contenedor_icon-menu">
-            <label for="boton-menu"><i class="icon-menu bi bi-list"></i>
+  <div id="container_ppal">
+    <div id="containerPage">
+      <header>
+        <div class="contenedor-header">
+          <div class="contenedor-logo">
+            <img class="img-logo" src="../Imagenes/Logo.png" alt="Freya"/> 
           </div>
-          <nav class="navegacion">
+          <div class="contenedor-menu">
+            <span class="icon-menu" id="btn-menu"><i class="bi bi-list"></i></span>
+            <nav class="navegacion" id="navegacion">
               <ul class="menu">
                 <li><a href="../index.html">Inicio</a>
                 <li><a href="../galeria.html">Galeria</a>
                   <ul class="submenu">
-                    <li><a style="padding: 15px" href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                    <li><a style="padding: 15px" href="../GaleriaHTML/corazones.html" >Corazones</a></li>
-                    <li><a style="padding: 15px" href="../GaleriaHTML/licores.html" >Bebidas</a></li>
-                    <li><a style="padding: 15px" href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
-                    <li><a style="padding: 15px" href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                    <li><a style="padding: 15px" href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
+                    <li><a href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                    <li><a href="../GaleriaHTML/corazones.html" >Corazones</a></li>
+                    <li><a href="../GaleriaHTML/licores.html" >Bebidas</a></li>
+                    <li><a href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                    <li><a href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                    <li><a href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
                   </ul>
                 </li>
                 <li><a href="../tienda.html">Tienda</a></li>
@@ -43,48 +41,51 @@
                 <li><a href="../contacto.html">Contáctanos</a></li>
               </ul>
           </nav>
+          </div>
+          
         </div>
-      </div>
-    </header>
-    <main>
-      <div class="container-main">
-        <div style="border-radius: 20px; border-color: #ffc8dd; width: 100%; height: 300px">
-            <p>Aqui irá la imagen que está seleccionando</p>
+      </header>
+      <main>
+        <div class="container-main">
+          <div style="border-radius: 20px; border-color: #ffc8dd; width: 100%; height: 300px">
+              <p>Aqui irá la imagen que está seleccionando</p>
+          </div>
+          <div style="border-radius:20px; border-color: #ffc8dd;  width: 100%; height: 300px">
+              <table>
+                  <tr>
+                      <td>  Producto 1  </td>
+                      <td>  Producto 2  </td>
+                      <td>  Producto 3  </td>
+                  </tr>
+                  <tr>
+                      <td>  Producto 4  </td>
+                      <td>  Producto 5  </td>
+                      <td>  Producto 6  </td>
+                  </tr>
+                  <tr>
+                      <td>  Producto 7  </td>
+                      <td>  Producto 8  </td>
+                      <td>  Producto 9  </td>
+                  </tr>
+              </table>
+          </div>
         </div>
-        <div style="border-radius:20px; border-color: #ffc8dd;  width: 100%; height: 300px">
-            <table>
-                <tr>
-                    <td>  Producto 1  </td>
-                    <td>  Producto 2  </td>
-                    <td>  Producto 3  </td>
-                </tr>
-                <tr>
-                    <td>  Producto 4  </td>
-                    <td>  Producto 5  </td>
-                    <td>  Producto 6  </td>
-                </tr>
-                <tr>
-                    <td>  Producto 7  </td>
-                    <td>  Producto 8  </td>
-                    <td>  Producto 9  </td>
-                </tr>
-            </table>
+      </main>
+      <footer>
+        <div class="contenedor-footer">
+          <div class="iconos">
+            <img class="IMG_footer" src="Imagenes/instagram.svg">
+            <img class="IMG_footer" src="Imagenes/facebook.svg">
+          </div>
+          <div class="textofooter">
+            <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
+            <h2 class="titulofooter">Teléfono/Whatsapp: <i class="bi bi-whatsapp">3132371940</i></h2>
+            <h2 class="titulofooter">Horario de atención: Lunes a Sábado de 8:00 am a 6:00 pm</h2>
+          </div>
         </div>
-      </div>
-    </main>
-    <footer>
-      <div class="contenedor-footer">
-        <div class="iconos">
-          <img class="IMG_footer" src="Imagenes/instagram.svg">
-          <img class="IMG_footer" src="Imagenes/facebook.svg">
-        </div>
-        <div class="textofooter">
-          <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
-          <h2 class="titulofooter">Teléfono/Whatsapp: <i class="bi bi-whatsapp">3132371940</i></h2>
-          <h2 class="titulofooter">Horario de atención: Lunes a Sábado de 8:00 am a 6:00 pm</h2>
-        </div>
-      </div>
-    </footer>
+      </footer>
     </div>
+    <script src="../javaScript/menu.js"></script>
+  </div>
 </body>
 </html>
