--- a/Proyecto/GaleriaHTML/tortaPaleta.html
+++ b/Proyecto/GaleriaHTML/tortaPaleta.html
@@ -5,159 +5,162 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Torta Paleta - Freya</title>
-    <link rel="stylesheet" href="../CSS/galeriaIMG.css">
     <link rel="stylesheet" href="../CSS/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@500&family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
 </head>
-<header>
-    <div class="contenedor-header">
-      <div class="contenedor-logo">
-        <img src="../Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
-      </div>
-      <div class="contenedor-menu">
-        <input type="checkbox" id="boton-menu" />
-        <label for="boton-menu"><i class="bi bi-list"></i></label>
-        <nav class="navegacion">
-          <div>
-            <ul class="menu">
-              <li><a href="../index.html">Inicio</a>
-              <li><a href="../galeria.html">Galeria</a>
-                <ul class="submenu">
-                  <li><a style="padding: 15px" href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                  <li><a style="padding: 15px" href="../GaleriaHTML/corazones.html" >Corazones</a></li>
-                  <li><a style="padding: 15px" href="../GaleriaHTML/licores.html" >Bebidas</a></li>
-                  <li><a style="padding: 15px" href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
-                  <li><a style="padding: 15px" href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                  <li><a style="padding: 15px" href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
-                  <li><a style="padding: 15px" href="../#">Cajas</a></li>
-                </ul>
-              </li>
-              <li><a href="../tienda.html">Tienda</a></li>
-              <li><a href="../registroClientes.html">Registrate</a></li>
-              <li><a href="../contacto.html">Contáctanos</a></li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </div>
-  </header>
 <body>
-    <div class="galeria">
-        <div class="contenedorPaleta">
-            <div class="imagen">
-                <img src="../../Imagenes/tortaPaleta/tortaPaleta (8).png" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
+    <div id="container_ppal">
+        <div id="containerPage">
+            <header>
+            <div class="contenedor-header">
+              <div class="contenedor-logo">
+                <img class="img-logo" src="../Imagenes/Logo.png" alt="Freya"/> 
+              </div>
+              <div class="contenedor-menu">
+                <span class="icon-menu" id="btn-menu"><i class="bi bi-list"></i></span>
+                <nav class="navegacion" id="navegacion">
+                  <ul class="menu">
+                    <li><a href="../index.html">Inicio</a>
+                    <li><a href="../galeria.html">Galeria</a>
+                      <ul class="submenu">
+                        <li><a href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                        <li><a href="../GaleriaHTML/corazones.html" >Corazones</a></li>
+                        <li><a href="../GaleriaHTML/licores.html" >Bebidas</a></li>
+                        <li><a href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                        <li><a href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                        <li><a href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="../tienda.html">Tienda</a></li>
+                    <li><a href="../registroClientes.html">Registrate</a></li>
+                    <li><a href="../contacto.html">Contáctanos</a></li>
+                  </ul>
+              </nav>
+              </div>
+              
             </div>
-            <div class="imagen">
-                <img src="../../Imagenes/tortaPaleta/tortaPaleta (9).png" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
+            </header>
+            <main>
+                <div class="galeria">
+                    <div class="contenedorPaleta">
+                        <div class="imagen">
+                            <img src="../../Imagenes/tortaPaleta/tortaPaleta (8).png" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="../../Imagenes/tortaPaleta/tortaPaleta (9).png" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="../../Imagenes/tortaPaleta/tortaPaleta (3).png" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="../../Imagenes/tortaPaleta/tortaPaleta (4).png" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="../../Imagenes/tortaPaleta/tortaPaleta (5).png" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="../Imagenes/tortaPaleta/tortaPaleta (6).png" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="../Imagenes/tortaPaleta/tortaPaleta (7).png" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="../../Imagenes/tortaPaleta/tortaPaleta (15).jpeg" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="../../Imagenes/tortaPaleta/tortaPaleta (1).png" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="../Imagenes/tortaPaleta/tortaPaleta (10).png" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="../Imagenes/tortaPaleta/tortaPaleta (11).png" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="../Imagenes/tortaPaleta/tortaPaleta (12).jpeg" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="../Imagenes/tortaPaleta/tortaPaleta (13).jpeg" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="Imagenes/tortaPaleta/tortaPaleta (14).jpeg" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="Imagenes/tortaPaleta/tortaPaleta (2).png" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="Imagenes/tortaPaleta/tortaPaleta (16).jpeg" alt="">
+                            <div class="overlay">
+                                <h2>Comprar</h2>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="imagen">
-                <img src="../../Imagenes/tortaPaleta/tortaPaleta (3).png" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
+            </main>
+            <footer>
+                <div class="contenedor-footer">
+                  <div class="iconos">
+                    <img class="IMG_footer" src="../Imagenes/instagram.svg">
+                    <img class="IMG_footer" src="../Imagenes/facebook.svg">
+                  </div>
+                  <div class="textofooter">
+                    <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
+                    <h2 class="titulofooter">Teléfono/Whatsapp: <i class="bi bi-whatsapp">3132371940</i></h2>
+                    <h2 class="titulofooter">Horario de atención: Lunes a Sábado de 8:00 am a 6:00 pm</h2>
+                  </div>
                 </div>
-            </div>
-            <div class="imagen">
-                <img src="../../Imagenes/tortaPaleta/tortaPaleta (4).png" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="../../Imagenes/tortaPaleta/tortaPaleta (5).png" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="../Imagenes/tortaPaleta/tortaPaleta (6).png" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="../Imagenes/tortaPaleta/tortaPaleta (7).png" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="../../Imagenes/tortaPaleta/tortaPaleta (15).jpeg" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="../../Imagenes/tortaPaleta/tortaPaleta (1).png" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="../Imagenes/tortaPaleta/tortaPaleta (10).png" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="../Imagenes/tortaPaleta/tortaPaleta (11).png" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="../Imagenes/tortaPaleta/tortaPaleta (12).jpeg" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="../Imagenes/tortaPaleta/tortaPaleta (13).jpeg" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="Imagenes/tortaPaleta/tortaPaleta (14).jpeg" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="Imagenes/tortaPaleta/tortaPaleta (2).png" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="Imagenes/tortaPaleta/tortaPaleta (16).jpeg" alt="">
-                <div class="overlay">
-                    <h2>Comprar</h2>
-                </div>
-            </div>
+            </footer>
         </div>
+        <script src="../JavaScript/menu.js"></script>
     </div>
 </body>
-<footer>
-    <div class="contenedor-footer">
-      <div class="iconos">
-        <img class="IMG_footer" src="../Imagenes/instagram.svg">
-        <img class="IMG_footer" src="../Imagenes/facebook.svg">
-      </div>
-      <div class="textofooter">
-        <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
-        <h2 class="titulofooter">Teléfono/Whatsapp: <i class="bi bi-whatsapp">3132371940</i></h2>
-        <h2 class="titulofooter">Horario de atención: Lunes a Sábado de 8:00 am a 6:00 pm</h2>
-      </div>
 
-    </div>
-  </footer>
 </html>
