--- a/Proyecto/galeria.html
+++ b/Proyecto/galeria.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galeria - Freya</title>
+    <link href="../CSS/estilos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link href="CSS/estilos.css" rel="stylesheet">
-    <link href="CSS/galeriaIMG.css" rel="stylesheet">
     <!-- Las siguientes 3 líneas corresponden a la asignación de estilo de letra desde Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,28 +14,26 @@
     <!-- -->
   </head>
   <body>
-    <div class="containerPage">
-      <header>
-        <div class="contenedor-header">
-          <div class="contenedor-logo">
-            <img src="../Imagenes/Logo.png" height="180px" alt="Freya" style="float: left" /> 
-          </div>
-          <div class="contenedor-menu">
-            <input type="checkbox" id="boton-menu" />
-            <div class="contenedor_icon-menu">
-              <label for="boton-menu"><i class="icon-menu bi bi-list"></i>
+    <div id="container_ppal">
+      <div id="containerPage">
+        <header>
+          <div class="contenedor-header">
+            <div class="contenedor-logo">
+              <img class="img-logo" src="../Imagenes/Logo.png" alt="Freya"/> 
             </div>
-            <nav class="navegacion">
+            <div class="contenedor-menu">
+              <span class="icon-menu" id="btn-menu"><i class="bi bi-list"></i></span>
+              <nav class="navegacion" id="navegacion">
                 <ul class="menu">
                   <li><a href="../index.html">Inicio</a>
                   <li><a href="../galeria.html">Galeria</a>
                     <ul class="submenu">
-                      <li><a style="padding: 15px" href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
-                      <li><a style="padding: 15px" href="../GaleriaHTML/corazones.html" >Corazones</a></li>
-                      <li><a style="padding: 15px" href="../GaleriaHTML/licores.html" >Bebidas</a></li>
-                      <li><a style="padding: 15px" href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
-                      <li><a style="padding: 15px" href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
-                      <li><a style="padding: 15px" href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
+                      <li><a href="../GaleriaHTML/chocoFresas.html">Choco Fresas</a></li>
+                      <li><a href="../GaleriaHTML/corazones.html" >Corazones</a></li>
+                      <li><a href="../GaleriaHTML/licores.html" >Bebidas</a></li>
+                      <li><a href="../GaleriaHTML/chocoSorpresa.html">Choco Piñata</a></li>
+                      <li><a href="../GaleriaHTML/tortaPaleta.html">Torta Paleta</a></li>
+                      <li><a href="../GaleriaHTML/variedad.html">Figuras Especiales</a></li>
                     </ul>
                   </li>
                   <li><a href="../tienda.html">Tienda</a></li>
@@ -44,67 +41,71 @@
                   <li><a href="../contacto.html">Contáctanos</a></li>
                 </ul>
             </nav>
+            </div>
+            
           </div>
-        </div>
-      </header>
-    <main>
-      <div class="container-main">
-      <div class="galeria">
-        <div class="contenedorInicial">
-            <div class="imagen">
-              <img src="Imagenes/chocoFresas/10Fresas.jpeg" alt="">
-                <div class="overlay">
-                  <a href="GaleriaHTML/chocoFresas.html"><h2>Choco Fresas</h2></a>
+        </header>
+  
+        <main>
+          <div class="container-main">
+            <div class="contenedor_galeria">
+              <div class="galeria">
+                <div class="imagen_galeria">
+                  <img src="Imagenes/chocoFresas/10Fresas.jpeg" alt="">
+                  <div class="overlay">
+                    <a href="GaleriaHTML/chocoFresas.html"><h2>Choco Fresas</h2></a>
+                  </div>
                 </div>
-            </div>
-            <div class="imagen">
-              <img src="Imagenes/corazones/corazon (2).jpeg" alt="">
-              <div class="overlay">
-                <a href="GaleriaHTML/corazones.html"><h2>Corazones Rellenos</h2></a>
-              </div>
-            </div>
-            <div class="imagen">
-              <img src="Imagenes/licores/licor15.png" alt="">
-              <div class="overlay">
-                <a href="GaleriaHTML/licores.html"><h2>Bebidas</h2></a>
-              </div>
-            </div>
-            <div class="imagen">
-              <img src="Imagenes/chocoSorpresa/unicornioSorpresa.jpeg" alt="">
-              <div class="overlay">
-                <a href="GaleriaHTML/chocoSorpresa.html"><h2>Choco Piñata</h2></a>
-              </div>
-            </div>
-            <div class="imagen">
-              <img src="Imagenes/tortaPaleta/tortaPaleta (6).png" alt="">
-              <div class="overlay">
-                <a href="GaleriaHTML/tortaPaleta.html"><h2>Torta Paleta</h2></a>
-              </div>
-            </div>
-            <div class="imagen">
-              <img src="Imagenes/variedad/variedad (4).jpeg" alt="">
-              <div class="overlay">
-                <a href="GaleriaHTML/variedad.html"><h2>Variedad</h2></a>
+                <div class="imagen_galeria">
+                  <img src="Imagenes/corazones/corazon (2).jpeg" alt="">
+                  <div class="overlay">
+                    <a href="GaleriaHTML/corazones.html"><h2>Corazones Rellenos</h2></a>
+                  </div>
+                </div>
+                <div class="imagen_galeria">
+                  <img src="Imagenes/licores/licor15.png" alt="">
+                  <div class="overlay">
+                    <a href="GaleriaHTML/licores.html"><h2>Bebidas</h2></a>
+                  </div>
+                </div>
+                <div class="imagen_galeria">
+                  <img src="Imagenes/chocoSorpresa/unicornioSorpresa.jpeg" alt="">
+                  <div class="overlay">
+                    <a href="GaleriaHTML/chocoSorpresa.html"><h2>Choco Piñata</h2></a>
+                  </div>
+                </div>
+                <div class="imagen_galeria">
+                  <img src="Imagenes/tortaPaleta/tortaPaleta (6).png" alt="">
+                  <div class="overlay">
+                    <a href="GaleriaHTML/tortaPaleta.html"><h2>Torta Paleta</h2></a>
+                  </div>
+                </div>
+                <div class="imagen_galeria">
+                  <img src="Imagenes/variedad/variedad (4).jpeg" alt="">
+                  <div class="overlay">
+                    <a href="GaleriaHTML/variedad.html"><h2>Variedad</h2></a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-      </div>
-    </div>
-    </main>
-    <footer>
-      <div class="contenedor-footer">
-        <div class="iconos">
-          <img class="IMG_footer" src="Imagenes/instagram.svg">
-          <img class="IMG_footer" src="Imagenes/facebook.svg">
-        </div>
-        <div class="textofooter">
-          <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
-          <h2 class="titulofooter">Teléfono/Whatsapp: <i class="bi bi-whatsapp">3132371940</i></h2>
-          <h2 class="titulofooter">Horario de atención: Lunes a Sábado de 8:00 am a 6:00 pm</h2>
-        </div>
+        </main>
+        <footer>
+          <div class="contenedor-footer">
+            <div class="iconos">
+              <img class="IMG_footer" src="Imagenes/instagram.svg">
+              <img class="IMG_footer" src="Imagenes/facebook.svg">
+            </div>
+            <div class="textofooter">
+              <h2 class="titulofooter">Dirección: Transversal 2c #14c 38. Villas del Sutagao. Fusagasugá-Cundinamarca</h2>
+              <h2 class="titulofooter">Teléfono/Whatsapp: <i class="bi bi-whatsapp">3132371940</i></h2>
+              <h2 class="titulofooter">Horario de atención: Lunes a Sábado de 8:00 am a 6:00 pm</h2>
+          </div>
 
+          </div>
+        </footer>
       </div>
-    </footer>
-  </div>
+      <script src="../JavaScript/menu.js"></script>
+    </div>
   </body>
 </html>
