--- a/Proyecto/GaleriaHTML/chocoFresas.html
+++ b/Proyecto/GaleriaHTML/chocoFresas.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChocoFresas - Freya</title>
     <link href="../CSS/estilos.css" rel="stylesheet">
-    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@500&family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     
 </head>
 <body>
@@ -22,7 +22,7 @@
                 <img class="img-logo" src="../Imagenes/Logo.png" alt="Freya"/> 
               </div>
               <div class="contenedor-menu">
-                <span class="icon-menu" id="btn-menu"><i class="bi bi-list"></i></span>
+                <span class="icon-menu" id="btn-menu"><i class="fas fa-bars"></i></span>
                 <nav class="navegacion" id="navegacion">
                   <ul class="menu">
                     <li><a href="../index.html">Inicio</a>
@@ -46,83 +46,85 @@
             </div>
             </header>
             <main>
-                <div class="galeria">
-                <div class="contenedor">
-                    <div class="imagen">
-                        <img src="../Imagenes/chocoFresas/10Fresas.jpeg" alt="Fresa Chocolate">
-                        <div class="overlay">
-                            <h2>Comprar</h2>
+                <div class="container-main">
+                    <div class="contenedor_galeria">
+                        <div class="galeria">
+                            <div class="imagen_galeria-fresa">
+                                <img src="../Imagenes/chocoFresas/10Fresas.jpeg" alt="Fresa Chocolate">
+                                <div class="overlay">
+                                    <h2>Comprar</h2>
+                                </div>
+                            </div>
+                            <div class="imagen_galeria-fresa">
+                                <img src="../Imagenes/chocoFresas/3Fresas.jpeg" alt="Fresa Chocolate">
+                                <div class="overlay">
+                                    <h2>Comprar</h2>
+                                </div>
+                            </div>
+                            <div class="imagen_galeria-fresa">
+                                <img src="../Imagenes/chocoFresas/8Fresas.jpeg" alt="Fresa Chocolate">
+                                <div class="overlay">
+                                    <h2>Comprar</h2>
+                                </div>
+                            </div>
+                            <div class="imagen_galeria-fresa">
+                                <img src="../Imagenes/chocoFresas/8Fresas_2.jpeg" alt="Fresa Chocolate">
+                                <div class="overlay">
+                                    <h2>Comprar</h2>
+                                </div>
+                            </div>
+                            <div class="imagen_galeria-fresa">
+                                <img src="../Imagenes/chocoFresas/12Fresas.jpeg" alt="Fresa Chocolate">
+                                <div class="overlay">
+                                    <h2>Comprar</h2>
+                                </div>
+                            </div>
+                            <div class="imagen_galeria-fresa">
+                                <img src="../Imagenes/chocoFresas/15Fresas_2.jpeg" alt="Fresa Chocolate">
+                                <div class="overlay">
+                                    <h2>Comprar</h2>
+                                </div>
+                            </div>
+                            <div class="imagen_galeria-fresa">
+                                <img src="../Imagenes/chocoFresas/15Fresas.jpeg" alt="Fresa Chocolate">
+                                <div class="overlay">
+                                    <h2>Comprar</h2>
+                                </div>
+                            </div>
+                            <div class="imagen_galeria-fresa">
+                                <img src="../Imagenes/chocoFresas/canastaFresa.jpeg" alt="Fresa Chocolate">
+                                <div class="overlay">
+                                    <h2>Comprar</h2>
+                                </div>
+                            </div>
+                            <div class="imagen_galeria-fresa">
+                                <img src="../Imagenes/chocoFresas/cajaFresa.jpeg" alt="Fresa Chocolate">
+                                <div class="overlay">
+                                    <h2>Comprar</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contenedorVertical">
+                            <div class="imagenVertical">
+                                <img src="../Imagenes/chocoFresas/oreoFresas.jpeg" alt="Fresa Chocolate">
+                                <div class="overlay">
+                                    <h2>Comprar</h2>
+                                </div>
+                            </div>
+                            <div class="imagenVertical">
+                                <img src="../Imagenes/chocoFresas/6Fresas.jpeg" alt="Fresa Chocolate">
+                                <div class="overlay">
+                                    <h2>Comprar</h2>
+                                </div>
+                            </div>
+                            <div class="imagenVertical">
+                                <img src="../Imagenes/chocoFresas/8Fresas_3.jpeg" alt="Fresa Chocolate">
+                                <div class="overlay">
+                                    <h2>Comprar</h2>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="imagen">
-                        <img src="../Imagenes/chocoFresas/3Fresas.jpeg" alt="Fresa Chocolate">
-                        <div class="overlay">
-                            <h2>Comprar</h2>
-                        </div>
-                    </div>
-                    <div class="imagen">
-                        <img src="../Imagenes/chocoFresas/8Fresas.jpeg" alt="Fresa Chocolate">
-                        <div class="overlay">
-                            <h2>Comprar</h2>
-                        </div>
-                    </div>
-                    <div class="imagen">
-                        <img src="../Imagenes/chocoFresas/8Fresas_2.jpeg" alt="Fresa Chocolate">
-                        <div class="overlay">
-                            <h2>Comprar</h2>
-                        </div>
-                    </div>
-                    <div class="imagen">
-                        <img src="../Imagenes/chocoFresas/12Fresas.jpeg" alt="Fresa Chocolate">
-                        <div class="overlay">
-                            <h2>Comprar</h2>
-                        </div>
-                    </div>
-                    <div class="imagen">
-                        <img src="../Imagenes/chocoFresas/15Fresas_2.jpeg" alt="Fresa Chocolate">
-                        <div class="overlay">
-                            <h2>Comprar</h2>
-                        </div>
-                    </div>
-                    <div class="imagen">
-                        <img src="../Imagenes/chocoFresas/15Fresas.jpeg" alt="Fresa Chocolate">
-                        <div class="overlay">
-                            <h2>Comprar</h2>
-                        </div>
-                    </div>
-                    <div class="imagen">
-                        <img src="../Imagenes/chocoFresas/canastaFresa.jpeg" alt="Fresa Chocolate">
-                        <div class="overlay">
-                            <h2>Comprar</h2>
-                        </div>
-                    </div>
-                    <div class="imagen">
-                        <img src="../Imagenes/chocoFresas/cajaFresa.jpeg" alt="Fresa Chocolate">
-                        <div class="overlay">
-                            <h2>Comprar</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="contenedorVertical">
-                    <div class="imagenVertical">
-                        <img src="../Imagenes/chocoFresas/oreoFresas.jpeg" alt="Fresa Chocolate">
-                        <div class="overlay">
-                            <h2>Comprar</h2>
-                        </div>
-                    </div>
-                    <div class="imagenVertical">
-                        <img src="../Imagenes/chocoFresas/6Fresas.jpeg" alt="Fresa Chocolate">
-                        <div class="overlay">
-                            <h2>Comprar</h2>
-                        </div>
-                    </div>
-                    <div class="imagenVertical">
-                        <img src="../Imagenes/chocoFresas/8Fresas_3.jpeg" alt="Fresa Chocolate">
-                        <div class="overlay">
-                            <h2>Comprar</h2>
-                        </div>
-                    </div>
-                </div>
                 </div>
             </main>
             <footer>
