--- a/Proyecto/GaleriaHTML/licores.html
+++ b/Proyecto/GaleriaHTML/licores.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@500&family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 </head>
 <body>
     <div id="container_ppal">
@@ -20,7 +21,7 @@
                 <img class="img-logo" src="../Imagenes/Logo.png" alt="Freya"/> 
               </div>
               <div class="contenedor-menu">
-                <span class="icon-menu" id="btn-menu"><i class="bi bi-list"></i></span>
+                <span class="icon-menu" id="btn-menu"><i class="fas fa-bars"></i></span>
                 <nav class="navegacion" id="navegacion">
                   <ul class="menu">
                     <li><a href="../index.html">Inicio</a>
