--- a/Proyecto/contacto.html
+++ b/Proyecto/contacto.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contáctenos - Freya</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <link href="CSS/estilos.css" rel="stylesheet">
     <!-- Las siguientes 3 líneas corresponden a la asignación de estilo de letra desde Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
             <img class="img-logo" src="../Imagenes/Logo.png" alt="Freya"/> 
           </div>
           <div class="contenedor-menu">
-            <span class="icon-menu" id="btn-menu"><i class="bi bi-list"></i></span>
+            <span class="icon-menu" id="btn-menu"><i class="fas fa-bars"></i></span>
             <nav class="navegacion" id="navegacion">
               <ul class="menu">
                 <li><a href="../index.html">Inicio</a>
